# YouTubeAPI

./: .env.example  README.md  api.py  pyproject.toml  requirements.txt  task.py
apps/shared/: middleware.py
apps/users/: permissions.py  views.py
apps/users/admin/: __init__.py  channels.py  users.py
apps/users/migrations/: 0001_initial.py  0002_delete_channel.py  0003_user_date_of_berthd.py  0004_user_gender.py
apps/users/models/: users.py
apps/videos/: apps.py  consumers.py  services.py  urls.py
apps/videos/admin/: __init__.py  channels.py  comments.py  histories.py  notifications.py  playlists.py  report.py  search.py  stream.py  tags.py  videos.py
apps/videos/choices/: __init__.py  categories.py  report.py  videos.py  visibilities.py
apps/videos/managers/: __init__.py  videos.py
apps/videos/migrations/: 0001_initial.py  0002_remove_video_tag_video_tag.py  0003_remove_channel_views_count.py  0004_delete_category.py  0005_remove_video_visibilitiy_video_audio_language_and_more.py  0006_alter_playlist_description.py  0007_watchhistory.py  0008_alter_video_options_channel_subscribers_and_more.py  0009_remove_watchhistory_duration_watched.py  0010_notification_notification_type_and_more.py  0011_alter_notification_notification_type_and_more.py  0012_channel_avatar.py  0013_searchhistory.py  0014_videoreport.py  0015_channel_social_links_alter_channel_avatar_and_more.py  0016_livestream.py  0017_livestream_audio_file_livestream_messages_and_more.py
apps/videos/models/: __init__.py  channels.py  comments.py  histories.py  notifications.py  playlists.py  report.py  search.py  (+3 more)
core/: asgi.py  schema.py  settings.py  urls.py
core/config/: __init__.py  apps.py  caches.py  celery.py  channels.py  email.py  graphql.py  graphql_jwt.py  logging.py
graphql_api_tester/: main.py
templates/: index.html
(+35 files in other folders)
