[tool.poetry]
name = "youtubeapi"
version = "0.1.0"
description = ""
authors = ["Akromjon"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"
django-modeltranslation = "^0.19.12"
celery = "^5.4.0"
flower = "^2.0.1"
django-redis = "^5.4.0"
django-rosetta = "^0.10.1"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
